# cpp-paper-trading

./: .gitignore  CMakeLists.txt  README.md  market_feed.js  package-lock.json  package.json
frontend/: package-lock.json  package.json  server.js
include/: ApiServer.hpp  CommunicationLayer.hpp  MarketDataSimulator.hpp  OrderEngine.hpp
src/: ApiServer.cpp  CommunicationLayer.cpp  MarketDataSimulator.cpp  OrderEngine.cpp  main.cpp
tests/: OrderEngineTests.cpp
